--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -459,6 +459,13 @@ button#cboxClose {
 float: right;
 }
 
+#cboxWrapper {
+padding: 25px;
+background: #fff;
+border: 1px solid #fff;
+border-radius: 15px;
+}
+
 /* =======================
    Concerts
    ======================= */
