just killing it with css

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -73,7 +73,9 @@ h5 {font-size: 14px;
 a{
   color: #A57513;
 }
-
+.single-photos time.published {
+display: none!important;
+}
 /*==========================================================================
   Bottom Slider Text
  ========================================================================== */
