--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -452,7 +452,7 @@ color:#045F6B
 /* =======================
    Colorbox
    ======================= */
-#cboxPrevious, #cboxCurrent, #cboxNext{
+/*#cboxPrevious, #cboxCurrent, #cboxNext{
   display: none!important;
 }
 button#cboxClose {
@@ -464,7 +464,7 @@ padding: 25px;
 background: #fff;
 border: 1px solid #fff;
 border-radius: 15px;
-}
+}*/
 
 /* =======================
    Concerts
@@ -651,10 +651,6 @@ margin-right: 25px;
               white-space: nowrap; 
               display: inline-block; 
 }
-.gal-title .btn:hover{
-  
-}
-
 /* ==========================================================================
    Posts
    ========================================================================== */
