--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -108,7 +108,7 @@ box-shadow: 0px 0px 10px 3px rgba(0,0,0,0.25);
 .navbar-default .navbar-nav>li>a {
 font-family: "baltica-web-extra-condensed"!important;
 color: #53534C!important;
-font-size: 21px!important;
+font-size: 21px;
 text-transform: uppercase!important;
 letter-spacing: .3em!important;
 }
