--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -407,6 +407,7 @@ content: "\f04b";
 background-color: #E1DED5;
 padding: 3px;
 text-align: center;
+margin: 15px 0;
 }
 .preview-container>* {
 font-size: 11px;
@@ -424,13 +425,15 @@ color:#045F6B
           Font-family: "Georgia"!important;
           text-decoration: none;
           overflow: visible;
-          padding: 6px 10px;
           left: auto;
           color: #045F6B!important;
           background: #E1DED5!important;
           white-space: nowrap;
           display: inline-block;
           border: 1px #045F6B solid!important;
+          width: 100%;
+          height: 55px;
+          padding: 9% 0;
 }
 
 /* ==========================================================================
@@ -503,7 +506,7 @@ font-size: 12px!important;
    /* .bit-date{
       width: 9%;
    } */
-   
+
  .concerts main{
 min-height: 550px;
 }
