text-align center in store header

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -301,6 +301,7 @@ margin-bottom: 15px;
    background-color: #0B5D6B;
    margin: 0 0%;
     margin-bottom: 15px; 
+    text-align: center;
 }
 .store-table-header h3{
    color: #fff;
