--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -435,6 +435,7 @@ color:#045F6B
           width: 100%;
           height: 55px;
           padding: 9% 0;
+          max-width: 175px;
 }
 
 /* ==========================================================================
