store-title margins

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -437,7 +437,9 @@ color:#045F6B
           padding: 9% 0;
           max-width: 175px;
 }
-
+.store-title h5 {
+margin-top: 15px;
+}
 /* ==========================================================================
    Primary Content
    ========================================================================== */
