--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -436,6 +436,7 @@ color:#045F6B
           height: 55px;
           padding: 9% 0;
           max-width: 175px;
+          font-size: 18px;
 }
 .store-title h5 {
 margin-top: 15px;
