--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -652,6 +652,7 @@ display: none;
 .gal-title {
 display: inline-block;
 margin-right: 25px;
+font-weight: bold;
 }
 
 .gal-title .btn{font-size: 100%;
