--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -836,7 +836,9 @@ h3{
 .store-title .preview-container {
   margin-top: 15px;
 }
-
+.buy-now img{
+  margin: 0 auto;
+}
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 992px) {
 
