store bottom row

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -318,6 +318,7 @@ margin-bottom: 15px;
 }
 .row-store {
 margin-top: 35px;
+border-bottom: 2px #045F6B solid;
 }
 .store-slider{
   margin-bottom: 50px;
