attempt at word break

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -444,6 +444,11 @@ color:#045F6B
           padding: 9% 0;
           max-width: 175px;
           font-size: 18px;
+          -ms-word-break: break-all;
+           word-break: break-word;
+          -webkit-hyphens: auto;
+          -moz-hyphens: auto;
+              hyphens: auto;
 }
 .store-title h5 {
 margin-top: 15px;
