--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -479,7 +479,9 @@ white-space: nowrap;
 /* Gallery Shortcode */
 .gallery-row { padding: 15px 0; }
 
-
+.hentry footer {
+display: none;
+}
 
 /* ==========================================================================
    Sidebar
