--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -165,7 +165,7 @@ input#mce-EMAIL {
 width: 20%!important;
 min-width: 1px!important;
 float: left;
-margin:0 1% 10px 0;
+margin:0 1% 10px 0!important;
 }
 input#mc-embedded-subscribe {
 width: 9%!important;
