--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -183,7 +183,7 @@ padding-bottom: 0px!important;
 float: left;
 margin: 6px 10px;
 font-size: 21px!important;
-display: none;
+display: none!important;
 }
 /* ==========================================================================
    Home
@@ -896,7 +896,7 @@ width: 16%!important;
 #mc_embed_signup label {
 margin: 6px 5px;
 font-size: 18px!important;
-display: block;
+display: block!important;
 }
 nav{
   /*fixes overlapping of navbar*/
