kill that nasty row

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -150,7 +150,9 @@ background-repeat: no-repeat;
 background-position: center center;
 }
 
-
+.navbar-collapse {
+max-height: 500px!important;
+}
 .container>.navbar-header, .container-fluid>.navbar-header, .container>.navbar-collapse, .container-fluid>.navbar-collapse {
 background-color: #988d71!important;
 background-image: url(../img/nav-bg.jpg)!important;
