--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -174,6 +174,7 @@ width: 30%!important;
 clear: none!important;
 float: left;
 min-width: 1px!important;
+background: #0C5E6C!important;
 }
 #mc_embed_signup label{
 font-family: "baltica-web-extra-condensed"!important;
