--- a/templates/views.html
+++ b/templates/views.html
@@ -317,16 +317,16 @@
                <div class="row">
                    <div class="col-sm-6">
              		<h5>[wpv-post-title]</h5>
-             		<img src="[types field="album-image" size="thumbnail" url="true" resize="proportional"][/types]" id="$parent" class="img-responsive">
+             		<img src="[types field="album-image" size="thumbnail" url="true" resize="proportional" id="$album"][/types]"  class="img-responsive">
          			</div>
 	         		<div class="col-sm-6">
-	         		[wpv-if $type="wpcf-prod-types" $type="CD"]
+	         		[wpv-if type="wpcf-prod-types" evaluate="$type='CD'"]
 	         			<p>[types field="description" id="$parent"][/types]</p>
 	     			<span class="buy-now-cd buy-now">
                 [wpv-woo-buy-or-select add_to_cart_text="Buy CD Here" link_to_product_text=’Buy CD Here’]
                       </span>
                       [/wpv-if]
-	                 	[wpv-if $type="wpcf-prod-types" $type="Sheet-Music (PDF)"]
+	                 	[wpv-if type="wpcf-prod-types" evaluate="$type='Sheet-Music (PDF)'"]
 	         			<p>[types field="short-description"][/types]</p>
 	     			<span class="buy-now Sheet-Music">
                 [wpv-woo-buy-or-select add_to_cart_text="Buy Sheet-Music"]
