--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -373,6 +373,9 @@ padding-top: 1%;
 border: 1px solid rgb(238, 238, 238);
 padding: 2%;
 }
+.store-desc{
+  height: 100px;
+}
   /*SoundManager Css*/
   a.sm2_button {
    position:relative;
