--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -70,6 +70,10 @@ h5 {font-size: 16px;
     color:#000000;
     font-family: "Georgia";
     }
+    h6{
+font-size: 14px;
+text-align: center;
+}
 a{
   color: #A57513;
 }
@@ -379,6 +383,9 @@ padding: 2%;
 .buy-options {
 list-style: none;
 padding-left: 0px;
+}
+.store-title h5 {
+text-align: left;
 }
   /*SoundManager Css*/
   a.sm2_button {
