--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -384,7 +384,7 @@ padding: 2%;
 list-style: none;
 padding-left: 0px;
 }
-.store-title h5 {
+.store-title-2 h5 {
 text-align: left;
 }
   /*SoundManager Css*/
