--- a/templates/views.html
+++ b/templates/views.html
@@ -297,6 +297,8 @@
             </div>
             </div>
 		</wpv-loop>
+		</div>
+		</div>
 	<!-- wpv-loop-end -->
 	[/wpv-items-found]
 	[wpv-no-items-found]
@@ -359,5 +361,47 @@
 	[/wpv-items-found]
 	[wpv-no-items-found]
         [wpml-string context="wpv-views"]<strong>N/A</strong>[/wpml-string]
+	[/wpv-no-items-found]
+[wpv-layout-end]
+
+<!--Store Chilluns-->
+[wpv-layout-start]
+	[wpv-items-found]
+	<!-- wpv-loop-start -->
+          <div class="row">		
+          <wpv-loop>
+          <div class="col-xs-6 store-buy">
+            <span class="buy-field">
+              <span class="buy-now">
+              [wpv-if type="wpcf-prod-types" evaluate="$type = 'Song (mp3)'" debug="true"]
+                [wpv-if type="wpcf-store" evaluate="$type = 'itunes'" debug="true"]
+                <a href="[types field="itunes-url" output="raw"][/types]" target="itunes_store" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/htmlResources/assets/en_us//images/web/linkmaker/badge_itunes-lrg.png) no-repeat;width:110px;height:40px;@media only screen{background-image:url(https://linkmaker.itunes.apple.com/htmlResources/assets/en_us//images/web/linkmaker/badge_itunes-lrg.svg);}"></a>
+                [/wpv-if]
+                [wpv-if type="wpcf-store" evaluate="$type = 'amazon'" debug="true"]
+                <a href="[types field="amazon-url" output="raw"][/types]" target="_blank">
+                  <img src="http://josephakins.12southmusic.com/wp-content/themes/josephakins/assets/img/amazon-buy-common.png" class="img-responsive"/>
+                </a>
+              [/wpv-if]
+                [/wpv-if]
+                [wpv-if type="wpcf-prod-types" evaluate="$type = 'Sheet-Music (PDF)'" debug="true"]
+                <span class="buy-now-sm">
+                [wpv-woo-buy-or-select add_to_cart_text="Buy Sheet-Music"]
+                </span>
+                [/wpv-if]
+              
+              </span>
+              <div class="row">
+                <div class="col-sm-12">
+              <span class="prod-price">[wpv-woo-product-price]</span>
+              </div>
+            </div>
+            <span class="title">[types field="prod-types" output="raw"][/types]</span>
+	</div>
+		</wpv-loop>
+</div>
+	<!-- wpv-loop-end -->
+	[/wpv-items-found]
+	[wpv-no-items-found]
+		[wpml-string context="wpv-views"]<strong>Not available</strong>[/wpml-string]
 	[/wpv-no-items-found]
 [wpv-layout-end]
