--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -164,8 +164,12 @@ background-color: #988d71!important;
 background-image: url(../img/nav-bg.jpg)!important;
 text-align:center!important;
 }
-
-.nav-mail {padding:10px;}
+.nav-mail {
+padding: 10px;
+display: block;
+float: right;
+width: 460px;
+}
 
 #mc_embed_signup {
  background: transparent!important;
@@ -193,8 +197,7 @@ font-weight: normal!important;
 padding-bottom: 0px!important;
 float: left;
 margin: 6px 10px;
-font-size: 21px!important;
-display: none!important;
+font-size: 15px;
 }
 /* ==========================================================================
    Home
@@ -887,6 +890,15 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
 h6{
   text-align: center;
 }
+
+.nav-mail {
+padding: 10px;
+display: block;
+float: none;
+width: 460px;
+margin: 0px auto;
+}
+
 .buy-now img{
   width: 90%;
 }
@@ -898,9 +910,7 @@ h6{
     height: 55px;
           padding: 9% 0;
 }
-.navbar-nav {
-margin-left: 15px;
-}
+
  .row-store {
 margin-top: 15px;
 border-bottom: 2px #045F6B solid;
@@ -926,6 +936,14 @@ h3{
 }
 
 
+@media (min-width:768px) and (max-width:991px){
+.navbar-nav {
+margin: 0px auto;
+float: none;
+width: 630px;
+}
+}
+
 
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 992px) {
@@ -938,6 +956,9 @@ nav{
 padding: 0 11%;
 }
 .owl-theme .owl-controls .owl-buttons .owl-next {position:absolute; right:3%;}
+
+#mc_embed_signup label {display: none;}
+
  }
 
 
@@ -952,6 +973,9 @@ padding: 0 11%;
 .navbar-default .navbar-nav>li>a{
   font-size: 20px;
 }
+
+#mc_embed_signup label {display:block;}
+
 }
 
 
