--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -187,6 +187,7 @@ clear: none!important;
 float: left;
 min-width: 1px!important;
 background: #0C5E6C!important;
+color:#fff;
 }
 #mc_embed_signup label{
 font-family: "baltica-web-extra-condensed"!important;
