--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -164,11 +164,14 @@ background-color: #988d71!important;
 background-image: url(../img/nav-bg.jpg)!important;
 text-align:center!important;
 }
+
 .nav-mail {
 padding: 10px;
 display: block;
-float: right;
-width: 460px;
+float: none;
+width: 180px;
+text-align: center;
+margin: 0px auto;
 }
 
 #mc_embed_signup {
@@ -895,9 +898,7 @@ h6{
 .nav-mail {
 padding: 10px;
 display: block;
-float: none;
 width: 460px;
-margin: 0px auto;
 }
 
 .buy-now img{
