--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -341,6 +341,12 @@ margin-bottom: 15px;
 .content { }
 
 /* ==========================================================================
+   Albums - Single
+   ========================================================================== */
+
+body.single-album .entry-meta {display:none;}
+
+/* ==========================================================================
    Store
    ========================================================================== */
 .store-table-header{
