--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -352,7 +352,9 @@ body.single-album .album-header {margin-bottom: 30px;}
 body.single-album .album-desc {font-size:16px;}
 
 body.single-album .featured-thumb {border: 1px solid #ccc;}
-body.single-album .featured-thumb img {border: 5px solid #fff;	}
+body.single-album .featured-thumb img {border: 5px solid #fff;}
+
+body.single-album .btn-lg {background: #A57513; color: #fff;}
 
 
 /* ==========================================================================
