--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -354,7 +354,7 @@ body.single-album .album-desc {font-size:16px;}
 body.single-album .featured-thumb {border: 1px solid #ccc;}
 body.single-album .featured-thumb img {border: 5px solid #fff;}
 
-body.single-album .btn-lg {background: #A57513; color: #fff;}
+body.single-album .btn {background: #A57513; color: #fff;}
 
 
 /* ==========================================================================
