--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -356,6 +356,8 @@ body.single-album .featured-thumb img {border: 5px solid #fff;}
 
 body.single-album .btn {background: #A57513; color: #fff;}
 
+body.single-album .buy-panel {text-align:center;}
+
 
 /* ==========================================================================
    Store
