--- a/templates/views.html
+++ b/templates/views.html
@@ -405,3 +405,25 @@
 		[wpml-string context="wpv-views"]<strong>Not available</strong>[/wpml-string]
 	[/wpv-no-items-found]
 [wpv-layout-end]
+
+<!--Single Product Template-->
+<div class="row">
+	<div class="col-sm-12">
+		<h3>[wpv-post-title]</h3>
+	</div>
+</div>
+<div class="row">
+	<div class="col-sm-4">
+		<div class="prod-img-container">
+			<img src="product shit" class="img-responsive">
+		</div>
+	</div>
+	<div class="col-sm-8">
+		<p>DESC</p>
+		<div class="buy-now-thing">
+			BUY NOW BUTTON SHORTCODE
+			<button class="ITUNES"></button>
+			<button class="AMAZON"></button>
+		</div>
+	</div>
+</div>
