--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -355,6 +355,7 @@ body.single-album .featured-thumb {border: 1px solid #ccc;}
 body.single-album .featured-thumb img {border: 5px solid #fff;}
 
 body.single-album .btn {background: #A57513; color: #fff;}
+body.single-album .btn-sm {background: #0B5D6B;}
 
 body.single-album .buy-panel {text-align:center;}
 
