--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -6,7 +6,9 @@
 /* ==========================================================================
    Base
    ========================================================================== */
-body { }
+body { 
+font-family: "clavo", "Georgia", sans-serif;	
+}
 
 .col {margin:0 1%;}
 
@@ -27,26 +29,21 @@ body.home > header {
   Header
   ===================================================================== */
 
-h1 {color:#A57513;
-    font-family:"Georgia"
-}
+h1 {color:#A57513;}
 
 .feat-music {
     font-size:50px;
     letter-spacing: 1px;
-    font-family: "Georgia";
     color:#3a5b13}
 
 h2 {
     color:#A57513;
-    font-family: "Georgia";
     font-style: Normal;
     font-size: 28px;
     letter-spacing:.08em;
     }
 
 p { color:#000000;
-    font-family:"Georgia";
     font-style:"Normal";
     font-size:14px;
     letter-spacing:.05em; 
@@ -65,11 +62,9 @@ h3{
 h4 {
    font-size: 14px;
    color:#ffffff;
-    font-family: "Georgia";
    }
 h5 {font-size: 16px;
     color:#000000;
-    font-family: "Georgia";
     }
     h6{
 font-size: 14px;
@@ -87,7 +82,6 @@ display: none!important;
 
 .music-carousel-item>h3 {
     color:#a67514;
-    font-family: "Georgia";
     text-align: left;
 }
 
@@ -359,7 +353,7 @@ body.single-album .btn-sm {background: #0B5D6B;}
 
 body.single-album .buy-panel {text-align:center;}
 
-.row-store a {display:inline-block;}
+.row-store a {display:inline-table;}
 
 .track-title {
 margin-top: 15px;
@@ -527,7 +521,6 @@ color:#045F6B
           font-weight: bold;
           margin: 0px;
           line-height: 1em;
-          Font-family: "Georgia"!important;
           text-decoration: none;
           overflow: visible;
           left: auto;
@@ -771,7 +764,6 @@ font-weight: bold;
 .gal-title .btn{font-size: 100%;
               margin:0px;
               line-height:1em;
-              Font-family: "Georgia"!important; 
               text-decoration: none; 
               overflow:visible;
               padding:6px 10px; 
