--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -371,9 +371,9 @@ margin:0px;
 padding:0px;
 }
 
-.song-list li {padding: 10px 0px;}
+.song-list li {}
 
-.song-list div {border:1px solid #ccc;}
+.song-list .col-sm-6 {border:1px solid #ccc; padding: 10px 0px;}
 
 .track-title {
 margin-top: 15px;
