--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -373,7 +373,7 @@ padding:0px;
 
 .song-list li {}
 
-.song-list .col-sm-6 {border:1px solid #ccc; padding: 10px 0px;}
+.song-list .col-sm-6 {border-right:1px solid #ccc; padding: 10px 0px;}
 
 .track-title {
 margin-top: 15px;
